package Empresa;

import lombok.Getter;
import lombok.Setter;

@Getter @Setter
public class Empleado {

    public Empleado(){

    }

    public void realizarTarea(){
        System.out.println("Empleado realizando una tarea generica...");
    }





}
